Add initial HTML structure for AutoPrime website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>AutoPrime</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header>
+  <strong>AutoPrime</strong>
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="catalogo.html">Catálogo</a>
+  </nav>
+</header>
+
+<section class="hero">
+  <h1>Elegir bien hoy, crecer mañana</h1>
+  <p>No vendemos autos. Ayudamos a tomar decisiones inteligentes.</p>
+  <a href="catalogo.html"><button class="btn">Ver vehículos</button></a>
+</section>
+
+<section>
+  <h2>Cómo trabajamos</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>Asesoría real</h3>
+      <p>Escuchamos tu momento antes de ofrecerte opciones.</p>
+    </div>
+    <div class="card">
+      <h3>Opciones claras</h3>
+      <p>Sin saturarte con información innecesaria.</p>
+    </div>
+    <div class="card">
+      <h3>Visión a futuro</h3>
+      <p>Lo que compras hoy debe servirte mañana.</p>
+    </div>
+  </div>
+</section>
+
+<section class="decision">
+  <div class="card">
+    <h3>Solución inmediata</h3>
+    <p>Ideal si quieres validar rápido y empezar sin complicarte.</p>
+  </div>
+
+  <div class="card">
+    <h3>Estrategia a largo plazo</h3>
+    <p>Para quienes buscan estructura, marca y crecimiento.</p>
+  </div>
+</section>
+
+<footer>
+  © AutoPrime — Decisiones claras, negocios que crecen
+</footer>
+
+</body>
+</html>
 
