Add featured vehicles section with vehicle cards

--- a/index.html
+++ b/index.html
@@ -55,6 +55,68 @@
       </div>
     </div>
   </section>
+  <!-- Featured Vehicles -->
+  <section class="featured-vehicles">
+    <div class="container">
+
+      <h2 class="section-title animate fade-up">
+        Featured Vehicles
+      </h2>
+
+      <div class="vehicles-grid">
+
+        <!-- Vehicle Card 1 -->
+        <article class="card animate fade-up delay-1">
+          <div class="card-image-placeholder">
+            Vehicle Image
+          </div>
+          <div class="card-body">
+            <h3 class="card-title">Toyota Corolla 2019</h3>
+            <p class="card-price">$15,500</p>
+            <a href="vehicle.html" class="btn btn-secondary">
+              View Details
+            </a>
+          </div>
+        </article>
+
+        <!-- Vehicle Card 2 -->
+        <article class="card animate fade-up delay-2">
+          <div class="card-image-placeholder">
+            Vehicle Image
+          </div>
+          <div class="card-body">
+            <h3 class="card-title">Honda CR-V 2020</h3>
+            <p class="card-price">$22,900</p>
+            <a href="vehicle.html" class="btn btn-secondary">
+              View Details
+            </a>
+          </div>
+        </article>
+
+        <!-- Vehicle Card 3 -->
+        <article class="card animate fade-up delay-3">
+          <div class="card-image-placeholder">
+            Vehicle Image
+          </div>
+          <div class="card-body">
+            <h3 class="card-title">Ford F-150 2018</h3>
+            <p class="card-price">$26,500</p>
+            <a href="vehicle.html" class="btn btn-secondary">
+              View Details
+            </a>
+          </div>
+        </article>
+
+      </div>
+
+      <div class="featured-cta animate fade-up delay-4">
+        <a href="inventory.html" class="btn btn-primary">
+          View Full Inventory
+        </a>
+      </div>
+
+    </div>
+  </section>
 
   <!-- JS -->
   <script src="assets/js/main.js"></script>
