--- a/index.html
+++ b/index.html
@@ -117,6 +117,73 @@
 
     </div>
   </section>
+<!-- Why Choose Autos Prime -->
+<section class="why-choose">
+  <div class="container">
+
+    <h2 class="section-title animate fade-up">
+      Why Choose Autos Prime
+    </h2>
+
+    <p class="section-subtitle animate fade-up delay-1">
+      A better way to buy used cars — transparent, simple, and reliable.
+    </p>
+
+    <div class="why-grid">
+
+      <!-- Reason 1 -->
+      <div class="why-card animate fade-up delay-2">
+        <div class="why-icon">
+          <!-- Icon placeholder -->
+          <div class="icon-placeholder"></div>
+        </div>
+        <h3>Trusted Vehicles</h3>
+        <p>
+          Every vehicle is carefully inspected to ensure quality,
+          reliability, and peace of mind.
+        </p>
+      </div>
+
+      <!-- Reason 2 -->
+      <div class="why-card animate fade-up delay-3">
+        <div class="why-icon">
+          <div class="icon-placeholder"></div>
+        </div>
+        <h3>Transparent Pricing</h3>
+        <p>
+          No hidden fees. What you see is what you pay —
+          honest pricing from start to finish.
+        </p>
+      </div>
+
+      <!-- Reason 3 -->
+      <div class="why-card animate fade-up delay-4">
+        <div class="why-icon">
+          <div class="icon-placeholder"></div>
+        </div>
+        <h3>Easy Scheduling</h3>
+        <p>
+          Book a visit in minutes and see the car in person,
+          on your schedule.
+        </p>
+      </div>
+
+      <!-- Reason 4 -->
+      <div class="why-card animate fade-up delay-5">
+        <div class="why-icon">
+          <div class="icon-placeholder"></div>
+        </div>
+        <h3>Personal Support</h3>
+        <p>
+          We guide you through every step to make your buying
+          experience smooth and stress-free.
+        </p>
+      </div>
+
+    </div>
+
+  </div>
+</section>
 
   <!-- JS -->
   <script src="assets/js/main.js"></script>
