Add trust section with customer reviews and CTAs

--- a/index.html
+++ b/index.html
@@ -184,6 +184,77 @@
 
   </div>
 </section>
+<!-- Trust & Social Proof -->
+<section class="trust">
+  <div class="container">
+
+    <h2 class="section-title animate fade-up">
+      Trusted by Drivers Across the Area
+    </h2>
+
+    <p class="section-subtitle animate fade-up delay-1">
+      Our customers value honesty, quality, and a smooth buying experience.
+    </p>
+
+    <div class="trust-grid">
+
+      <!-- Review 1 -->
+      <div class="review-card animate fade-up delay-2">
+        <p class="review-text">
+          “The process was simple and transparent. The car was exactly
+          as described and in excellent condition.”
+        </p>
+        <div class="review-author">
+          <strong>Michael R.</strong>
+          <span>Verified Buyer</span>
+        </div>
+      </div>
+
+      <!-- Review 2 -->
+      <div class="review-card animate fade-up delay-3">
+        <p class="review-text">
+          “Great customer service and no pressure at all.
+          I scheduled a visit and drove home happy.”
+        </p>
+        <div class="review-author">
+          <strong>Sarah L.</strong>
+          <span>Verified Buyer</span>
+        </div>
+      </div>
+
+      <!-- Review 3 -->
+      <div class="review-card animate fade-up delay-4">
+        <p class="review-text">
+          “Fair prices, honest communication, and clean vehicles.
+          I would definitely recommend Autos Prime.”
+        </p>
+        <div class="review-author">
+          <strong>Daniel K.</strong>
+          <span>Verified Buyer</span>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Trust Badges -->
+    <div class="trust-badges animate fade-up delay-5">
+      <div class="badge-placeholder">Quality Inspected</div>
+      <div class="badge-placeholder">Transparent Pricing</div>
+      <div class="badge-placeholder">Secure Scheduling</div>
+    </div>
+
+    <!-- Final CTA -->
+    <div class="trust-cta animate fade-up delay-6">
+      <a href="inventory.html" class="btn btn-primary">
+        Browse Available Cars
+      </a>
+      <a href="#" class="btn btn-secondary">
+        Contact via WhatsApp
+      </a>
+    </div>
+
+  </div>
+</section>
 
   <!-- JS -->
   <script src="assets/js/main.js"></script>
