Add footer section with brand and contact info

--- a/index.html
+++ b/index.html
@@ -255,6 +255,52 @@
 
   </div>
 </section>
+<!-- Footer -->
+<footer class="site-footer">
+  <div class="container footer-container">
+
+    <!-- Brand -->
+    <div class="footer-brand">
+      <h3>Autos<span>Prime</span></h3>
+      <p>
+        Quality used vehicles with transparent pricing and
+        easy scheduling.
+      </p>
+    </div>
+
+    <!-- Footer Navigation -->
+    <div class="footer-nav">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="inventory.html">Inventory</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Contact Info -->
+    <div class="footer-contact">
+      <h4>Contact</h4>
+      <ul>
+        <li>Email: info@autosprime.com</li>
+        <li>Phone: (555) 123-4567</li>
+        <li>
+          <a href="#" class="footer-whatsapp">
+            WhatsApp Chat
+          </a>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+
+  <!-- Bottom Bar -->
+  <div class="footer-bottom">
+    <p>
+      © 2026 Autos Prime. All rights reserved.
+    </p>
+  </div>
+</footer>
 
   <!-- JS -->
   <script src="assets/js/main.js"></script>
