--- a/inventory.html
+++ b/inventory.html
@@ -33,3 +33,91 @@
       </div>
     </div>
   </header>
+  <!-- Inventory Intro -->
+  <section class="inventory-hero">
+    <div class="container">
+      <h1 class="animate fade-up">Available Vehicles</h1>
+      <p class="animate fade-up delay-1">
+        Browse our current selection of quality used cars.
+        Schedule a visit to see any vehicle in person.
+      </p>
+    </div>
+  </section>
+  <!-- Inventory Filters -->
+  <section class="inventory-filters">
+    <div class="container animate fade-up delay-2">
+
+      <select>
+        <option>All Types</option>
+        <option>Sedan</option>
+        <option>SUV</option>
+        <option>Truck</option>
+      </select>
+
+      <select>
+        <option>Price Range</option>
+        <option>Under $20,000</option>
+        <option>$20,000 – $30,000</option>
+        <option>Over $30,000</option>
+      </select>
+
+    </div>
+  </section>
+  <!-- Inventory Grid -->
+  <section class="inventory-list">
+    <div class="container vehicles-grid">
+
+      <!-- Vehicle -->
+      <article class="card animate fade-up">
+        <div class="card-image-placeholder">Vehicle Image</div>
+        <div class="card-body">
+          <h3 class="card-title">Toyota Corolla 2019</h3>
+          <p class="card-price">$15,500</p>
+          <a href="vehicle.html" class="btn btn-secondary">View Details</a>
+        </div>
+      </article>
+
+      <article class="card animate fade-up delay-1">
+        <div class="card-image-placeholder">Vehicle Image</div>
+        <div class="card-body">
+          <h3 class="card-title">Honda CR-V 2020</h3>
+          <p class="card-price">$22,900</p>
+          <a href="vehicle.html" class="btn btn-secondary">View Details</a>
+        </div>
+      </article>
+
+      <article class="card animate fade-up delay-2">
+        <div class="card-image-placeholder">Vehicle Image</div>
+        <div class="card-body">
+          <h3 class="card-title">Ford F-150 2018</h3>
+          <p class="card-price">$26,500</p>
+          <a href="vehicle.html" class="btn btn-secondary">View Details</a>
+        </div>
+      </article>
+
+      <article class="card animate fade-up delay-3">
+        <div class="card-image-placeholder">Vehicle Image</div>
+        <div class="card-body">
+          <h3 class="card-title">Nissan Rogue 2021</h3>
+          <p class="card-price">$24,000</p>
+          <a href="vehicle.html" class="btn btn-secondary">View Details</a>
+        </div>
+      </article>
+
+      <article class="card animate fade-up delay-4">
+        <div class="card-image-placeholder">Vehicle Image</div>
+        <div class="card-body">
+          <h3 class="card-title">BMW 3 Series 2018</h3>
+          <p class="card-price">$27,900</p>
+          <a href="vehicle.html" class="btn btn-secondary">View Details</a>
+        </div>
+      </article>
+
+    </div>
+  </section>
+  <!-- JS -->
+  <script src="assets/js/main.js"></script>
+  <script src="assets/js/animations.js"></script>
+
+</body>
+</html>
