Update logo in the header of index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <header class="site-header">
     <div class="container header-container">
       <div class="logo">
-        <a href="index.html">Autos<span>Prime</span></a>
+       <a href="index.html">
+  <img src="assets/img/brand/logo.png" alt="Autos Prime Logo">
+</a>
+
       </div>
 
       <nav class="main-nav">
